--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,12 @@
+* Perché?
+- upload_scripts: viene invocato una sola volta
+- add_action( 'wp_enqueue_scripts', array( $this, 'upload_scripts' ) ) --> viene invocato 3 volte
 
-- Verificare numero passaggi: upload_scripts
-- Verificare numero passaggi: plugin_setup
+		if(strpos($current_screen->id, 'configurazione_page_') !== false || $current_screen->id === 'toplevel_page_dli_options') {
+
+ù
+Si può togliere?
+C:\Users\claudio\Local Sites\sitoict\app\public\wp-content\themes\design-ictsite-wp-theme\admin\css\images
 
 1) Configuration Menu with get_option wrapper
 4) FIRST CUSTOM POST TYPE
