Refactoring: Moved the code to put the configuration menu on the left in the DIS_OptionsManager class

--- a/TODO.txt
+++ b/TODO.txt
@@ -32,5 +32,5 @@ Code examples:
 
 
 	<svg class="icon icon-success">
-		<use href="<?php echo DIS_THEMA_URL . '/assets/bootstrap-italia/svg/sprites.svg#it-user' ?>"></use>
+		<use href="<?php echo DIS_THEME_URL . '/assets/bootstrap-italia/svg/sprites.svg#it-user' ?>"></use>
 	</svg>
