--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,12 @@
 
 * TODO LIST:
 
-1) HP: Gestione Lingua
-2) HP: Gestione Login
-3) Logo e titolo del sito
-4) Header: Link dei social
-5) Creazione dei menu: Main menu (header left), Secondary menu (header right), Top Bar (header), Footer (footer), Useful Link (footer)
-6) Link pagina di ricerca
-7) Creazione pagine statiche multilingua.
-
+1) Logo e titolo del sito
+2) Header: Link dei social
+3) Creazione dei menu: Main menu (header left), Secondary menu (header right), Top Bar (header), Footer (footer), Useful Link (footer)
+4) Link pagina di ricerca
+5) Creazione pagine statiche multilingua.
+6) Bug URL CMB2 del sito di sviluppo.
 
 
 * Procedure da fare:
