--- a/languages/es_ES.po
+++ b/languages/es_ES.po
@@ -2,11 +2,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Design ICT Site\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-03-10 08:30+0000\n"
-"PO-Revision-Date: 2025-05-05 09:28+0000\n"
+"POT-Creation-Date: 2025-05-05 09:24+0000\n"
+"PO-Revision-Date: 2025-05-05 09:30+0000\n"
 "Last-Translator: \n"
-"Language-Team: English (United States)\n"
-"Language: en_US\n"
+"Language-Team: Spanish (Spain)\n"
+"Language: es_ES\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -514,8 +514,8 @@ msgstr ""
 #: template-parts/footer/contacts-section.php:16
 msgid "FooterContactsDescription"
 msgstr ""
-"The telephone helpdesk is available from Monday to Friday during office "
-"hours (9.00-13.00/14.00-17.00)"
+"El servicio de asistencia telefónica está disponible de lunes a viernes en "
+"horario de oficina (9.00-13.00/14.00-17.00)."
 
 #: template-parts/footer/contacts-section.php:13
 msgid "FooterContactsLabel"
