--- a/TODO.txt
+++ b/TODO.txt
@@ -3,11 +3,10 @@
 
 - Add priority to Projects in CT and HP section.
 - Show in hp: default true.
-- HP Sponsor.
-- HP Blog.
-- Gestione slug.
-- Elenco servizi.
 - Ricerca e wrapper contenuti.
+- HP Featured Events.
+- Gestione slug.
+- Elenco cluster di servizi.
 - Dettaglio servizio.
 
 
