New features: Added the search wrapper for service-cluster and service

--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Design ICT Site\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-03-10 08:30+0000\n"
-"PO-Revision-Date: 2025-05-21 07:08+0000\n"
+"PO-Revision-Date: 2025-05-21 08:13+0000\n"
 "Last-Translator: \n"
 "Language-Team: Italiano\n"
 "Language: it_IT\n"
@@ -17,11 +17,11 @@ msgstr ""
 
 #: single-dis-service.php:55
 msgid "Access the service"
-msgstr ""
+msgstr "Accedi al servizio"
 
 #: header.php:85
 msgid "Accessory navigation"
-msgstr ""
+msgstr "Navigazione accessoria"
 
 #: template-parts/home/hp-banners-section.php:32
 msgid "Activity banner"
@@ -29,7 +29,7 @@ msgstr ""
 
 #: classes/options-manager.php:214
 msgid "Add a message"
-msgstr ""
+msgstr "Aggiungi un messaggio"
 
 #: classes/person-manager.php:42
 msgid "Add a person role"
@@ -41,25 +41,28 @@ msgstr ""
 
 #: classes/event-manager.php:35 classes/event-manager.php:36
 #: classes/project-manager.php:35 classes/project-manager.php:36
+#: classes/service-cluster-manager.php:38
+#: classes/service-cluster-manager.php:39 classes/service-manager.php:35
+#: classes/service-manager.php:36
 msgid "Add an item"
-msgstr ""
+msgstr "Aggiungi un oggetto"
 
 #: classes/options-manager.php:300
 msgid "Add the section"
-msgstr ""
+msgstr "Aggiungi la sezione"
 
 #: classes/options-manager.php:522
 msgid "Address"
-msgstr ""
+msgstr "Indirizzo"
 
 #: classes/options-manager.php:796 classes/options-manager.php:799
 #: classes/options-manager.php:813
 msgid "Advanced options"
-msgstr ""
+msgstr "Opzioni avanzate"
 
 #: template-parts/header/alert.php:17
 msgid "Alert"
-msgstr ""
+msgstr "Avviso"
 
 #: template-parts/home/hp-events-section.php:71
 msgid "All events"
@@ -79,43 +82,43 @@ msgstr "Tutti i progetti"
 
 #: classes/options-manager.php:751
 msgid "API token"
-msgstr ""
+msgstr "Token dell'API"
 
 #: classes/options-manager.php:218 classes/options-manager.php:304
 msgid "Are you sure you want to remove?"
-msgstr ""
+msgstr "Sei sicuro di voler rimuovere?"
 
 #: classes/attachment-manager.php:49
 msgid "Attachment"
-msgstr ""
+msgstr "Allegato"
 
 #: classes/attachment-manager.php:42
 msgid "Attachment image"
-msgstr ""
+msgstr "Immagine allegata"
 
 #: classes/options-manager.php:468
 msgid "Background image"
-msgstr ""
+msgstr "Immagine di sfondo"
 
 #: classes/banner-manager.php:46 template-parts/home/hp-banners-section.php:28
 msgid "Banner"
-msgstr ""
+msgstr "Banner"
 
 #: classes/banner-manager.php:39
 msgid "Banner image"
-msgstr ""
+msgstr "Immagine del banner"
 
 #: classes/options-manager.php:71
 msgid "Base options"
-msgstr ""
+msgstr "Opzioni base"
 
 #: classes/options-manager.php:744
 msgid "Brevo"
-msgstr ""
+msgstr "Brevo"
 
 #: page-templates/search.php:80
 msgid "Cancel"
-msgstr ""
+msgstr "Annulla"
 
 #: classes/person-manager.php:76
 msgid "Choose person image"
@@ -138,7 +141,7 @@ msgstr ""
 
 #: classes/options-manager.php:514
 msgid "City"
-msgstr ""
+msgstr "Città"
 
 #: classes/menu-manager.php:64
 msgid ""
@@ -148,10 +151,6 @@ msgstr ""
 
 #: template-parts/header/alert.php:32 template-parts/header/alert.php:33
 msgid "Close alert"
-msgstr ""
-
-#: classes/service-cluster-manager.php:42
-msgid "Cluster image"
 msgstr ""
 
 #: classes/options-manager.php:288
@@ -262,15 +261,35 @@ msgctxt "DIS_PostTypeLabels"
 msgid "projects"
 msgstr "progetti"
 
-#: classes/service-cluster-manager.php:36
+#: config-theme.php:64
+msgctxt "DIS_PostTypeLabels"
+msgid "Service"
+msgstr "Servizio"
+
+#: config-theme.php:58
+msgctxt "DIS_PostTypeLabels"
+msgid "Service Cluster"
+msgstr "Gruppo Servizi"
+
+#: config-theme.php:59
 msgctxt "DIS_PostTypeLabels"
 msgid "Service Clusters"
-msgstr ""
+msgstr "Gruppi Servizi"
 
-#: classes/service-manager.php:33
+#: config-theme.php:60
+msgctxt "DIS_PostTypeLabels"
+msgid "service-clusters"
+msgstr "gruppi-servizi"
+
+#: config-theme.php:65
 msgctxt "DIS_PostTypeLabels"
 msgid "Services"
-msgstr ""
+msgstr "Servizi"
+
+#: config-theme.php:66
+msgctxt "DIS_PostTypeLabels"
+msgid "services"
+msgstr "servizi"
 
 #: classes/sponsor-manager.php:33
 msgctxt "DIS_PostTypeLabels"
@@ -292,12 +311,6 @@ msgctxt "DIS_PostTypeSingularName"
 msgid "Add a banner"
 msgstr ""
 
-#: classes/service-cluster-manager.php:38
-#: classes/service-cluster-manager.php:39
-msgctxt "DIS_PostTypeSingularName"
-msgid "Add a cluster"
-msgstr ""
-
 #: classes/person-manager.php:72
 msgctxt "DIS_PostTypeSingularName"
 msgid "Add a person"
@@ -306,11 +319,6 @@ msgstr ""
 #: classes/place-manager.php:71
 msgctxt "DIS_PostTypeSingularName"
 msgid "Add a place"
-msgstr ""
-
-#: classes/service-manager.php:35 classes/service-manager.php:36
-msgctxt "DIS_PostTypeSingularName"
-msgid "Add a service"
 msgstr ""
 
 #: classes/sponsor-manager.php:35 classes/sponsor-manager.php:36
@@ -363,11 +371,6 @@ msgctxt "DIS_PostTypeSingularName"
 msgid "Edit the banner"
 msgstr ""
 
-#: classes/service-cluster-manager.php:40
-msgctxt "DIS_PostTypeSingularName"
-msgid "Edit the cluster"
-msgstr ""
-
 #: classes/office-manager.php:37
 msgctxt "DIS_PostTypeSingularName"
 msgid "Edit the item"
@@ -381,11 +384,6 @@ msgstr ""
 #: classes/place-manager.php:72
 msgctxt "DIS_PostTypeSingularName"
 msgid "Edit the place"
-msgstr ""
-
-#: classes/service-manager.php:37
-msgctxt "DIS_PostTypeSingularName"
-msgid "Edit the service"
 msgstr ""
 
 #: classes/sponsor-manager.php:37
@@ -408,16 +406,6 @@ msgctxt "DIS_PostTypeSingularName"
 msgid "Place"
 msgstr ""
 
-#: classes/service-manager.php:34
-msgctxt "DIS_PostTypeSingularName"
-msgid "Service"
-msgstr ""
-
-#: classes/service-cluster-manager.php:37
-msgctxt "DIS_PostTypeSingularName"
-msgid "Service Cluster"
-msgstr ""
-
 #: classes/sponsor-manager.php:34
 msgctxt "DIS_PostTypeSingularName"
 msgid "Sponsor"
@@ -438,11 +426,6 @@ msgctxt "DIS_PostTypeSingularName"
 msgid "View the banner"
 msgstr ""
 
-#: classes/service-cluster-manager.php:41
-msgctxt "DIS_PostTypeSingularName"
-msgid "View the cluster"
-msgstr ""
-
 #: classes/office-manager.php:38
 msgctxt "DIS_PostTypeSingularName"
 msgid "View the item"
@@ -456,11 +439,6 @@ msgstr ""
 #: classes/place-manager.php:73
 msgctxt "DIS_PostTypeSingularName"
 msgid "View the place"
-msgstr ""
-
-#: classes/service-manager.php:38
-msgctxt "DIS_PostTypeSingularName"
-msgid "View the service"
 msgstr ""
 
 #: classes/sponsor-manager.php:38
@@ -519,6 +497,7 @@ msgid ""
 msgstr ""
 
 #: classes/event-manager.php:37 classes/project-manager.php:37
+#: classes/service-cluster-manager.php:40 classes/service-manager.php:37
 msgid "Edit the item"
 msgstr ""
 
@@ -541,6 +520,8 @@ msgstr ""
 #: classes/options-manager.php:963
 msgid "Enable the counter of the views of the service detail page."
 msgstr ""
+"Abilita il contatore delle visualizzazioni della pagina dei dettagli del "
+"servizio."
 
 #: classes/options-manager.php:603
 msgid ""
@@ -869,20 +850,16 @@ msgstr ""
 msgid "No"
 msgstr ""
 
-#: classes/contents-manager.php:422
-msgid "Offices"
-msgstr "Uffici"
-
 #: single-dis-service-cluster.php:68 page-templates/service-clusters.php:17
 #: template-parts/home/hp-clusters-section.php:22
 msgid "Our services"
-msgstr ""
+msgstr "I nostri servizi"
 
 #: classes/options-manager.php:942
 msgid "Page counters"
 msgstr ""
 
-#: classes/contents-manager.php:426
+#: classes/contents-manager.php:438
 msgid "Pages"
 msgstr ""
 
@@ -919,7 +896,7 @@ msgstr ""
 msgid "Place Type"
 msgstr ""
 
-#: classes/contents-manager.php:430
+#: classes/contents-manager.php:442
 msgid "Posts"
 msgstr ""
 
@@ -942,7 +919,7 @@ msgstr ""
 
 #: single-dis-service.php:215
 msgid "Related services"
-msgstr ""
+msgstr "Servizi correlati"
 
 #: classes/menu-manager.php:39 classes/menu-manager.php:40
 #: classes/menu-manager.php:62
@@ -957,20 +934,12 @@ msgstr ""
 msgid "Remove banner image"
 msgstr ""
 
-#: classes/service-cluster-manager.php:44
-msgid "Remove cluster image"
-msgstr ""
-
 #: classes/person-manager.php:77
 msgid "Remove person image"
 msgstr ""
 
 #: classes/place-manager.php:76
 msgid "Remove place image"
-msgstr ""
-
-#: classes/service-manager.php:41
-msgid "Remove service image"
 msgstr ""
 
 #: classes/sponsor-manager.php:41
@@ -1052,35 +1021,19 @@ msgstr ""
 msgid "SEO"
 msgstr ""
 
-#: classes/service-manager.php:46
-msgid "Service"
-msgstr ""
-
-#: classes/service-cluster-manager.php:49
-msgid "Service Cluster"
-msgstr ""
-
-#: classes/service-manager.php:39
-msgid "Service image"
-msgstr ""
-
 #: classes/options-manager.php:962
 msgid "Service views counter"
-msgstr ""
+msgstr "Contatore delle visualizzazioni del servizio"
 
 #. Name of the template
 #: page-templates/service-clusters.php:2
 msgid "ServiceClusters"
-msgstr ""
+msgstr "GruppiServizi"
 
 #. Name of the template
 #: page-templates/service-items.php:2
 msgid "ServiceItems"
-msgstr ""
-
-#: classes/contents-manager.php:438
-msgid "Services"
-msgstr ""
+msgstr "Servizi"
 
 #: classes/options-manager.php:602
 msgid "Show social media icons"
@@ -1271,20 +1224,12 @@ msgstr ""
 msgid "Use as attachment image"
 msgstr ""
 
-#: classes/service-cluster-manager.php:45
-msgid "Use as cluster image"
-msgstr ""
-
 #: classes/person-manager.php:78
 msgid "Use as person image"
 msgstr ""
 
 #: classes/place-manager.php:77
 msgid "Use as place image"
-msgstr ""
-
-#: classes/service-manager.php:42
-msgid "Use as service image"
 msgstr ""
 
 #: classes/user-status-manager.php:45
@@ -1308,6 +1253,7 @@ msgid "Vai alla pagina: Newsletter"
 msgstr ""
 
 #: classes/event-manager.php:38 classes/project-manager.php:38
+#: classes/service-cluster-manager.php:41 classes/service-manager.php:38
 msgid "View the item"
 msgstr ""
 
@@ -1324,6 +1270,8 @@ msgid ""
 "WordPress theme for building websites that showcase and facilitate the use "
 "of an organization's ICT services."
 msgstr ""
+"Tema WordPress per la creazione di siti web che presentano e facilitano "
+"l'uso dei servizi ICT di un'organizzazione."
 
 #: classes/options-manager.php:901
 msgid "XMLRPC API"
