--- a/languages/en_US.po
+++ b/languages/en_US.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Design ICT Site\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-03-10 08:30+0000\n"
-"PO-Revision-Date: 2025-05-21 13:10+0000\n"
+"PO-Revision-Date: 2025-05-28 12:42+0000\n"
 "Last-Translator: \n"
 "Language-Team: English (United States)\n"
 "Language: en_US\n"
@@ -114,10 +114,6 @@ msgstr ""
 msgid "Brevo"
 msgstr ""
 
-#: page-templates/search.php:81
-msgid "Cancel"
-msgstr ""
-
 #: classes/options-manager.php:313
 msgid "Choose the section."
 msgstr ""
@@ -160,7 +156,7 @@ msgstr ""
 msgid "Contacts"
 msgstr ""
 
-#: page-templates/search.php:107
+#: page-templates/search.php:109
 msgid "Content type filter"
 msgstr ""
 
@@ -176,7 +172,7 @@ msgstr ""
 msgid "Designed for"
 msgstr ""
 
-#: page-templates/search.php:74
+#: page-templates/search.php:79
 msgid "Digit the text to search"
 msgstr ""
 
@@ -395,6 +391,34 @@ msgctxt "DIS_PostTypeLabels"
 msgid "Users Status"
 msgstr "Users Status"
 
+#: template-parts/home/hp-main-hero-section.php:20
+msgctxt "DIS_SiteOptionLabel"
+msgid "MainHeroLeftButtonLabel"
+msgstr "See all services"
+
+#: template-parts/home/hp-main-hero-section.php:21
+msgctxt "DIS_SiteOptionLabel"
+msgid "MainHeroRightButtonLabel"
+msgstr "Get IT Support"
+
+#: template-parts/home/hp-main-hero-section.php:19
+msgctxt "DIS_SiteOptionLabel"
+msgid "MainHeroSearchButtonLabel"
+msgstr "Search"
+
+#: template-parts/home/hp-main-hero-section.php:18
+msgctxt "DIS_SiteOptionLabel"
+msgid "MainHeroText"
+msgstr ""
+"Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper "
+"dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl "
+"nunc mi ipsum faucibus."
+
+#: template-parts/home/hp-main-hero-section.php:17
+msgctxt "DIS_SiteOptionLabel"
+msgid "MainHeroTitle"
+msgstr "How can I help you?"
+
 #: classes/person-manager.php:36
 msgctxt "DIS_TaxonomyGeneralName"
 msgid "Person Roles"
@@ -571,8 +595,8 @@ msgstr ""
 msgid "Header logo visible"
 msgstr ""
 
-#: template-parts/home/hp-main-hero-section.php:31
-#: template-parts/home/hp-main-hero-section.php:32
+#: template-parts/home/hp-main-hero-section.php:36
+#: template-parts/home/hp-main-hero-section.php:37
 msgid "Hero image"
 msgstr ""
 
@@ -805,6 +829,11 @@ msgstr "Our services"
 msgid "Page counters"
 msgstr ""
 
+#: template-parts/common/pagination.php:55
+#: template-parts/common/pagination.php:68
+msgid "pagina"
+msgstr ""
+
 #: classes/person-manager.php:44
 msgid "Person Roles"
 msgstr ""
@@ -864,7 +893,7 @@ msgstr ""
 msgid "REST API"
 msgstr ""
 
-#: page-templates/search.php:140
+#: page-templates/search.php:142
 msgid "Results"
 msgstr ""
 
@@ -872,7 +901,7 @@ msgstr ""
 msgid "Right button label"
 msgstr ""
 
-#: page-templates/search.php:84 template-parts/header/site_search.php:11
+#: page-templates/search.php:86 template-parts/header/site_search.php:11
 msgid "Search"
 msgstr ""
 
@@ -891,7 +920,7 @@ msgstr ""
 msgid "Search in the site."
 msgstr ""
 
-#: page-templates/search.php:65 page-templates/search.php:70
+#: page-templates/search.php:70 page-templates/search.php:75
 msgid "Search the site"
 msgstr ""
 
@@ -954,7 +983,7 @@ msgstr ""
 msgid "Site contacts"
 msgstr ""
 
-#: template-parts/home/hp-main-hero-section.php:53
+#: template-parts/home/hp-main-hero-section.php:58
 msgid "Site search"
 msgstr ""
 
