--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -3,16 +3,16 @@ msgstr ""
 "Project-Id-Version: Design ICT Site\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-03-10 08:30+0000\n"
-"PO-Revision-Date: 2025-05-29 14:15+0000\n"
+"PO-Revision-Date: 2025-05-30 10:03+0000\n"
 "Last-Translator: \n"
-"Language-Team: Italiano\n"
+"Language-Team: Italian\n"
 "Language: it_IT\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Loco https://localise.biz/\n"
-"X-Loco-Version: 2.7.1; wp-6.7.2\n"
+"X-Loco-Version: 2.8.0; wp-6.8.1; php-8.3.11\n"
 "X-Domain: design_ict_site"
 
 #: single-dis-service.php:55
@@ -1343,7 +1343,7 @@ msgstr ""
 
 #: template-parts/menu/useful-links-menu.php:21
 msgid "Useful links menu"
-msgstr "Menù dei link utili"
+msgstr "Menu dei link utili"
 
 #: template-parts/common/newsletter.php:11
 msgid "Vai alla pagina: Newsletter"
