--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Design ICT Site\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-03-10 08:30+0000\n"
-"PO-Revision-Date: 2025-07-17 07:17+0000\n"
+"PO-Revision-Date: 2025-07-17 07:31+0000\n"
 "Last-Translator: \n"
 "Language-Team: Italiano\n"
 "Language: it_IT\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Loco https://localise.biz/\n"
-"X-Loco-Version: 2.8.0; wp-6.8.1; php-8.3.11\n"
+"X-Loco-Version: 2.8.0; wp-6.8.2; php-8.3.11\n"
 "X-Domain: design_ict_site"
 
 #: single-dis-service.php:55
@@ -875,7 +875,7 @@ msgstr "Funzionalità"
 
 #: page-templates/news.php:150 page-templates/news.php:154
 msgid "Filter by category"
-msgstr "Filtro per categoria"
+msgstr "Filtra per categoria"
 
 #: page-templates/search.php:186 page-templates/search.php:217
 msgid "Filters for selecting search results"
